

==============================
Release 2.*
==============================
2014-07-10    CodedUIEnvironment: Add settings for defaults in CombinableAnd and CombinableWith
2014-07-09    DynamicSleep: Add DynamicSleep
              CodedUIEnvironment: Add CodedUIEnvironment object for global coded UI settings
2014-07-08    ElementFinder: Add possibility to change the application blacklist; 
2014-07-07    ElementFinder: Add tab to show a suggested basic element
              ElementFinder: Add reading BasicElement properties; 
              ElementFinder: Add notification to the bottom of the suggest page; 
2014-07-06    ElementFinder: Add behavior shortcuts and let the user change them
2014-07-05    ElementFinder: Style controls
2014-07-04    ElementFinder: Add ElementObserver to detect if an element disappears to close the highlighter automatically
2014-07-03    ElementFinder: Add possibility to keep element highlighter position and size up to date
2014-07-02    ElementFinder: Change default value of the LeftColumnWidth from 50 to 230
2014-07-01    ElementFinder: Add possibility to define the ElementFinder TopMost or not
              ElementFinder: Remember and restore the width of the left column
              ElementFinder: Ignore Visual Studio process
              ElementFinder: Add blacklisted applications
              ElementFinder: Add possibility to define the element highlight as topmost or non topmost
              ElementFinder: The marks if the element has an automation id or not will never become white anymore
2014-06-06    ElementFinder: Listen for system key CTRL+E to enable and disable
2014-05-31    From: Add possibility to start UI element search from the main window of the current to test process
              From: Add possibility to start UI element search from the last found window
              From: Add possibility to start UI element search from the desktop