@@ -1,0 +1,11 @@
+﻿namespace DW.CodedUI.Internal
+{
+    internal enum IsCondition
+    {
+        Nothing,
+        MainWindow,
+        ChildOf,
+        ParentOf,
+        OwnerOf
+    }
+}
